Fixed an issue causing the footer to overlap page content

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,12 @@
 @charset "UTF-8";
 
-html, body {
-    height: 100%;
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 40px;
 }
 
 #banner {
@@ -23,4 +28,12 @@ html, body {
 
 .timestamp {
     font-size: 12px;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
 }
